--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "antd": "^5.1.2",
+    "chart.js": "^4.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
